save (one sequence)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/snsx
-spring.datasource.username=????
-spring.datasource.password=????
+spring.datasource.username=mtak
+spring.datasource.password=0235
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 spring.jpa.open-in-view=false
@@ -13,3 +13,5 @@ server.error.include-message=always
 server.error.include-exception=true
 server.error.include-stacktrace=always
 security.basic.enabled=false
+logging.level.org.apache.coyote.http11=debug
+file.dir=/Users/mtak/snsX/images/
