--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/snsx
-spring.datasource.username=????
-spring.datasource.password=????
+spring.datasource.username=wocho
+spring.datasource.password=Wlsrkfao6!
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 spring.jpa.open-in-view=false
@@ -13,3 +13,4 @@ server.error.include-message=always
 server.error.include-exception=true
 server.error.include-stacktrace=always
 security.basic.enabled=false
+file.dir="resources/static/images/"
