--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/snsx
-spring.datasource.username=wocho
-spring.datasource.password=Wlsrkfao6!
+spring.datasource.username=mtak
+spring.datasource.password=0235
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 spring.jpa.open-in-view=false
@@ -13,4 +13,6 @@ server.error.include-message=always
 server.error.include-exception=true
 server.error.include-stacktrace=always
 security.basic.enabled=false
-file.dir=/Users/green/study/snsX/images/
+file.dir=/Users/mtak/snsX/images/
+spring.servlet.multipart.max-file-size=200MB
+
