--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ server.error.include-exception=true
 server.error.include-stacktrace=always
 security.basic.enabled=false
 file.dir=/Users/taewan/Desktop/snsX/images/
-spring.servlet.multipart.max-file-size=200MB
-
+spring.servlet.multipart.max-file-size=3MB
+spring.servlet.multipart.max-request-size=10MB
