--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/snsx
-spring.datasource.username=mtak
-spring.datasource.password=0235
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 spring.jpa.open-in-view=false
@@ -12,7 +12,7 @@ server.error.include-binding-errors=always
 server.error.include-message=always
 server.error.include-exception=true
 server.error.include-stacktrace=always
-file.dir=/Users/mtak/snsX/images/
+file.dir=/Users//snsX/images/
 security.basic.enabled=false
 spring.servlet.multipart.max-file-size=3MB
 spring.servlet.multipart.max-request-size=10MB
